--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
 	"version": "0.2.0",
 	"configurations": [
 		{
-			"name": "PowerShell",
+			"name": "code-powershell-sample",
 			"type": "PowerShell",
 			"request": "launch",
 			"program": "my.ps1"
